# flowninjas-core

./: .env.example  README.md  SETUP.md  demo.py  pyproject.toml
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: workflows.py
app/core/: config.py  logging.py
app/models/: workflow.py
app/services/: ai_service.py  workflow_service.py
scripts/: start.sh
tests/: test_api.py
